# gap

./: MANIFEST.in  README.md  environment.yml  setup.cfg
docker/: Dockerfile  Dockerfile-dev  build  cibuild  console  docs-server  format  notebook  stac  test
src/stactools/gap/: __init__.py  commands.py  constants.py  metadata.py  stac.py  utils.py
src/stactools/gap/metadata/: __init__.py
tests/: test_commands.py  test_metadata.py  test_module.py  test_stac.py  utils.py
tests/data-files/: GAP_LANDFIRE_National_Terrestrial_Ecosystems_2011.xml  gap_landfire_nationalterrestrialecosystems2011_subset.tif  natgaplandcov_v2_metadata.xml  prgap_landcover_downsampled.img
