[metadata]
name = stactools-gap
version = attr: stactools.gap.__version__
description = stactools package for working with USGS Gap Analysis Project (GAP) data
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-gaps/stactools-gap
project_urls =
    Documentation = https://stactools-gap.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-gaps/gap/issues
keywords = 
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools @ git+https://github.com/stac-utils/stactools@eabd76323670f1ecdb2d9c71240a80763d5d7130

[options.packages.find]
where = src
